--- a/_crubrand.scss
+++ b/_crubrand.scss
@@ -1,6 +1,4 @@
-@import "../bootstrap-sass-official/assets/stylesheets/boostrap/variables";
-
-@import "overrides";
-@import "settings";
-@import "base/scaffolding";
-@import "base/type";
+@import "crubrand/overrides";
+@import "crubrand/settings";
+@import "crubrand/base/scaffolding";
+@import "crubrand/base/type";
