Setting up testing environment

--- a/bootstrap-variations/_navbar.scss
+++ b/bootstrap-variations/_navbar.scss
@@ -1,6 +1,6 @@
-//
-// Navbars
-// --------------------------------------------------
+/*------------------------------------*\
+ #BOOTSTRAP/NAVBARS
+\*------------------------------------*/
 
 $gold-bar-size: 3px;
 
