--- a/bootstrap-variations/_scaffolding.scss
+++ b/bootstrap-variations/_scaffolding.scss
@@ -1,6 +1,6 @@
-//
-// Scaffolding
-// --------------------------------------------------
+/*------------------------------------*\
+ #BOOTSTRAP/SCAFFOLDING
+\*------------------------------------*/
 
 
 // Reset the box-sizing
