--- a/bootstrap-variations/_type.scss
+++ b/bootstrap-variations/_type.scss
@@ -1,6 +1,6 @@
-//
-// Typography
-// --------------------------------------------------
+/*------------------------------------*\
+ #BOOTSTRAP/TYPE
+\*------------------------------------*/
 
 // Headings
 // -------------------------
