--- a/generic/mixins/_type.scss
+++ b/generic/mixins/_type.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+ #MIXINS/TYPE
+\*------------------------------------*/
+
 /**
  * Quickly generate a font-size in rems, with a pixel fallback, based on the
  * value we pass into the mixin, e.g.:
