--- a/_overrides.scss
+++ b/_overrides.scss
@@ -14,7 +14,7 @@ $gray:                   lighten($gray-base, 33.5%); // #555
 $gray-light:             lighten($gray-base, 46.7%); // #777
 $gray-lighter:           lighten($gray-base, 93.5%); // #eee
 
-$brand-primary:          darken(#ffd014, 6.5%);
+$brand-primary:          $color-gold;
 $brand-success:          #5cb85c;
 $brand-info:             #5bc0de;
 $brand-warning:          lighten($color-orange, 10%);
@@ -56,7 +56,7 @@ $font-size-h5:            $font-size-base;
 $font-size-h6:            $font-size-base;
 
 //** Unit-less `line-height` for use in components like buttons.
-$line-height-base:        strip-units( $line-height-pixel / $font-size-base );
+$line-height-base:         $line-height-pixel / $font-size-base;
 
 //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
 $line-height-computed:    floor( $font-size-base * $line-height-base );
