--- a/generic/_tools.scss
+++ b/generic/_tools.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+ #TOOLS
+\*------------------------------------*/
+
 @function strip-units($num) {
 	@return $num / ($num * 0 + 1);
 }
