--- a/_overrides.scss
+++ b/_overrides.scss
@@ -96,6 +96,10 @@ $btn-default-color:              #6d6e71;
 $btn-default-bg:                 rgba(229,229,229,0.35);
 $btn-default-border:             rgba(216,216,216,0.35);
 
+$btn-primary-color:              #fff;
+$btn-primary-bg:                 $brand-primary;
+$btn-primary-border:             darken($btn-primary-bg, 5%);
+
 
 //== Forms
 //
