--- a/bootstrap-variations/_type.scss
+++ b/bootstrap-variations/_type.scss
@@ -87,6 +87,10 @@ p {
   margin: 0 0 ($line-height-computed / 2);
 }
 
+.page-content p {
+    font-size: 19px;
+}
+
 
 // Emphasis & misc
 // -------------------------
