Adding mixins as tools

--- a/_crubrand.scss
+++ b/_crubrand.scss
@@ -152,8 +152,6 @@
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/navs";
 
 @import "bootstrap-variations/navbar";
-//@import "../bootstrap-sass-official/assets/stylesheets/bootstrap/navbar";
-
 
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/breadcrumbs";
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/pagination";
@@ -180,3 +178,6 @@
 // Utility classes
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/utilities";
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/responsive-utilities";
+
+@import "generic/helpers";
+@import "generic/spacing";
