--- a/_settings.scss
+++ b/_settings.scss
@@ -1,3 +1,6 @@
+$font-size-base: 16px;
+
+$base-font-size: $font-size-base;
 $line-height-pixel: 29px;
 
 /**
@@ -16,6 +19,7 @@ $color-secondary:       $color-gray;
 $brand-primary:         $color-primary;
 
 $color-text:            #3a3a3a;
+$color-black:           #000;
 
 
 
@@ -37,3 +41,9 @@ $font-size-small-h5:    $font-size-h5 - 2px;
 $btn-secondary-color:   #fff;
 $btn-secondary-bg:      $color-secondary;
 $btn-secondary-border:  #595455;
+
+/**
+ * For use in calculations
+ */
+$base-line-height:  $line-height-pixel;
+$base-spacing-unit: $line-height-pixel;
