--- a/generic/_mixins.scss
+++ b/generic/_mixins.scss
@@ -1,5 +1,22 @@
 /*------------------------------------*\
  #MIXINS/TYPE
 \*------------------------------------*/
-
+@import "mixins/alerts";
+@import "mixins/animations";
+@import "mixins/border-radius";
+@import "mixins/box-model";
+@import "mixins/buttons";
+@import "mixins/center-block";
+@import "mixins/clearfix";
+@import "mixins/forms";
+@import "mixins/grid-setup";
+@import "mixins/images";
+@import "mixins/links";
+@import "mixins/media-query";
+@import "mixins/messages";
+@import "mixins/opacity";
+@import "mixins/panels";
+@import "mixins/prefix";
+@import "mixins/sizing";
+@import "mixins/spacing";
 @import "mixins/type";
