--- a/_crubrand.scss
+++ b/_crubrand.scss
@@ -123,6 +123,7 @@
 // Core variables and mixins
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
 
+@import "generic/tools";
 @import "settings";
 @import "overrides";
 @import "generic/mixins";
