--- a/_crubrand.scss
+++ b/_crubrand.scss
@@ -105,7 +105,7 @@
  */
 
 /*------------------------------------*\
-  $WARNING
+  #WARNING
 \*------------------------------------*/
 /**
  * Custom styles for cru.org are meant to be place in the elements folder. 
@@ -118,7 +118,7 @@
   
  
 /*------------------------------------*\
- $IMPORTS
+ #IMPORTS
 \*------------------------------------*/
 // Core variables and mixins
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
@@ -152,6 +152,7 @@
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/input-groups";
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/navs";
 
+@import "components/lists";
 @import "bootstrap-variations/navbar";
 
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/breadcrumbs";
