--- a/_settings.scss
+++ b/_settings.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+ #SETTINGS
+\*------------------------------------*/
+
 $font-size-base: 16px;
 
 $base-font-size: $font-size-base;
