--- a/generic/_spacing.scss
+++ b/generic/_spacing.scss
@@ -34,13 +34,13 @@ $enable-paddings--none:   false !default;
 	/**
 	 * Add margins.
 	 */	
-	.m,  %m     { margin:       $base-margin; }
-	.mt, %mt    { margin-top:   $base-margin; }
-	.mr, %mr    { margin-right: $base-margin; }
-	.mb, %mb    { margin-bottom:$base-margin; }
-	.ml, %ml    { margin-left:  $base-margin; }
-	.me, %me    { margin-top:   $base-margin; margin-bottom:$base-margin; }
-	.ms, %ms    { margin-right: $base-margin; margin-left:  $base-margin; }
+	.m,  %m     { margin:        $base-margin; }
+	.mt, %mt    { margin-top:    $base-margin; }
+	.mr, %mr    { margin-right:  $base-margin; }
+	.mb, %mb    { margin-bottom: $base-margin; }
+	.ml, %ml    { margin-left:   $base-margin; }
+	.me, %me    { margin-top:    $base-margin; margin-bottom: $base-margin; }
+	.ms, %ms    { margin-right:  $base-margin; margin-left:   $base-margin; }
 	
 }
 
@@ -70,8 +70,8 @@ $enable-paddings--none:   false !default;
 	.mr-, %mr-    { margin-right:  half($base-margin); }
 	.mb-, %mb-    { margin-bottom: half($base-margin); }
 	.ml-, %ml-    { margin-left:   half($base-margin); }
-	.me-, %me-    { margin-top:    half($base-margin); margin-bottom: half($base-margin); ; }
-	.ms-, %ms-    { margin-right:  half($base-margin); margin-left:   half($base-margin); ; }
+	.me-, %me-    { margin-top:    half($base-margin); margin-bottom: half($base-margin); }
+	.ms-, %ms-    { margin-right:  half($base-margin); margin-left:   half($base-margin); }
 	
 }
 
@@ -81,13 +81,13 @@ $enable-paddings--none:   false !default;
 	/**
 	 * Large Margins.
 	 */
-	.m_x,  %m_x     { margin:        double($base-margin) ;  }
-	.mt_x, %mt_x    { margin-top:    double($base-margin) ;  }
-	.mr_x, %mr_x    { margin-right:  double($base-margin) ;  }
-	.mb_x, %mb_x    { margin-bottom: double($base-margin) ;  }
-	.ml_x, %ml_x    { margin-left:   double($base-margin) ;  }
-	.me_x, %me_x    { margin-top:    double($base-margin) ; margin-bottom:  double($base-margin) ; }
-	.ms_x, %ms_x    { margin-right:  double($base-margin) ; margin-left: double($base-margin) ; }
+	.m_x,  %m_x     { margin:        double($base-margin);  }
+	.mt_x, %mt_x    { margin-top:    double($base-margin);  }
+	.mr_x, %mr_x    { margin-right:  double($base-margin);  }
+	.mb_x, %mb_x    { margin-bottom: double($base-margin);  }
+	.ml_x, %ml_x    { margin-left:   double($base-margin);  }
+	.me_x, %me_x    { margin-top:    double($base-margin); margin-bottom:  double($base-margin); }
+	.ms_x, %ms_x    { margin-right:  double($base-margin); margin-left:    double($base-margin); }
 }
 
 
@@ -96,13 +96,13 @@ $enable-paddings--none:   false !default;
 	/**
 	 * Huge Margins.
 	 */
-	.m_xx,  %m_xx    { margin:       quadruple($base-margin) ;  }
-	.mt_xx, %mt_xx   { margin-top:   quadruple($base-margin) ;  }
-	.mr_xx, %mr_xx   { margin-right: quadruple($base-margin) ;  }
-	.mb_xx, %mb_xx   { margin-bottom:quadruple($base-margin) ;  }
-	.ml_xx, %ml_xx   { margin-left:  quadruple($base-margin) ;  }
-	.ms_xx, %ms_xx   { margin-top:   quadruple($base-margin) ; margin-bottom: quadruple($base-margin) ; }
-	.me_xx, %me_xx   { margin-right: quadruple($base-margin) ; margin-left:  quadruple($base-margin) ; }
+	.m_xx,  %m_xx    { margin:       quadruple($base-margin);  }
+	.mt_xx, %mt_xx   { margin-top:   quadruple($base-margin);  }
+	.mr_xx, %mr_xx   { margin-right: quadruple($base-margin);  }
+	.mb_xx, %mb_xx   { margin-bottom:quadruple($base-margin);  }
+	.ml_xx, %ml_xx   { margin-left:  quadruple($base-margin);  }
+	.ms_xx, %ms_xx   { margin-top:   quadruple($base-margin); margin-bottom: quadruple($base-margin); }
+	.me_xx, %me_xx   { margin-right: quadruple($base-margin); margin-left:  quadruple($base-margin); }
 	
 }
 
@@ -117,8 +117,8 @@ $enable-paddings--none:   false !default;
 	.mr0, %mr0    { margin-right: 0; }
 	.mb0, %mb0    { margin-bottom:0; }
 	.ml0, %ml0    { margin-left:  0; }
-	.me0, %me0    { margin-top:   0; margin-bottom:0; }
-	.ms0, %ms0    { margin-right: 0; margin-left:  0; }
+	.me0, %me0    { margin-top:   0; margin-bottom: 0; }
+	.ms0, %ms0    { margin-right: 0; margin-left:   0; }
 
 }
 
@@ -132,13 +132,13 @@ $enable-paddings--none:   false !default;
 	/**
 	 * Add paddings.
 	 */
-	.p,  %p    { padding:       $base-padding; }
-	.pt, %pt   { padding-top:   $base-padding; }
-	.pr, %pr   { padding-right: $base-padding; }
-	.pb, %pb   { padding-bottom:$base-padding; }
-	.pl, %pl   { padding-left:  $base-padding; }
-	.pe, %pe   { padding-top:   $base-padding; padding-bottom:$base-padding; }
-	.ps, %ps   { padding-right: $base-padding; padding-left:  $base-padding; }
+	.p,  %p    { padding:        $base-padding; }
+	.pt, %pt   { padding-top:    $base-padding; }
+	.pr, %pr   { padding-right:  $base-padding; }
+	.pb, %pb   { padding-bottom: $base-padding; }
+	.pl, %pl   { padding-left:   $base-padding; }
+	.pe, %pe   { padding-top:    $base-padding; padding-bottom: $base-padding; }
+	.ps, %ps   { padding-right:  $base-padding; padding-left:   $base-padding; }
 	
 }
 
@@ -207,12 +207,12 @@ $enable-paddings--none:   false !default;
 	/**
 	 * Remove paddings.
 	 */
-	.p0,  %p0    { padding:       0; }
-	.pt0,  %pt0  { padding-top:   0; }
-	.pr0,  %pr0  { padding-right: 0; }
-	.pb0,  %pb0  { padding-bottom:0; }
-	.pl0,  %pl0  { padding-left:  0; }
-	.pe0,  %pe0  { padding-top:   0; padding-bottom:0; }
-	.ps0,  %ps0  { padding-right: 0; padding-left:  0; }
+	.p0,  %p0    { padding:        0; }
+	.pt0,  %pt0  { padding-top:    0; }
+	.pr0,  %pr0  { padding-right:  0; }
+	.pb0,  %pb0  { padding-bottom: 0; }
+	.pl0,  %pl0  { padding-left:   0; }
+	.pe0,  %pe0  { padding-top:    0; padding-bottom: 0; }
+	.ps0,  %ps0  { padding-right:  0; padding-left:   0; }
 	
 }
