Installing lint and fixing errors

--- a/_settings.scss
+++ b/_settings.scss
@@ -2,9 +2,9 @@
  #SETTINGS
 \*------------------------------------*/
 
-$font-size-base: 16px;
+$font-size-base:    16px;
 
-$base-font-size: $font-size-base;
+$base-font-size:    $font-size-base;
 $line-height-pixel: 29px;
 
 /**
@@ -28,7 +28,7 @@ $color-black:           #000;
 
 
 /**
- * #TYPOGRAPHY/HEADERS
+ * #HEADINGS
  */
 $font-ratio-header:     1.314159;
 
