--- a/generic/mixins/_links.scss
+++ b/generic/mixins/_links.scss
@@ -6,8 +6,10 @@
  * Includes active and focus for accessibility 
  * 
  */
-@mixin link-psuedo(){
-    &:hover, &:focus, &:active{
+@mixin link-psuedo() {
+    &:hover, 
+    &:focus, 
+    &:active {
         @content;
     }
 }
