--- a/bootstrap-variations/_scaffolding.scss
+++ b/bootstrap-variations/_scaffolding.scss
@@ -9,26 +9,24 @@
 // For recommendations on resolving such conflicts, see
 // http://getbootstrap.com/getting-started/#third-box-sizing
 * {
-  @include box-sizing(border-box);
+    @include box-sizing(border-box);
 }
+
 *:before,
 *:after {
-  @include box-sizing(border-box);
+    @include box-sizing(border-box);
 }
-
 
 // Body reset
-
 html {
-    font-size: $font-size-base;
+    font-size: ($font-size-base / 16px) * 1em;
     line-height: $line-height-base;
+    font-family: $font-family-base;
     color: $text-color;
     background-color: $body-bg;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-}
-
-body{
-    font-family: $font-family-base;
+    
+    
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     -webkit-font-smoothing: antialiased; 
 }
 
@@ -37,27 +35,27 @@ input,
 button,
 select,
 textarea {
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
+    font-family: inherit;
+    font-size: inherit;
+    line-height: inherit;
 }
 
 
 // Links
 
 a {
-  color: $link-color;
-  text-decoration: none;
+    color: $link-color;
+    text-decoration: none;
 
-  &:hover,
-  &:focus {
-    color: $link-hover-color;
-    text-decoration: $link-hover-decoration;
-  }
+    &:hover,
+    &:focus {
+        color: $link-hover-color;
+        text-decoration: $link-hover-decoration;
+    }
 
-  &:focus {
-    @include tab-focus;
-  }
+    &:focus {
+        @include tab-focus;
+    }
 }
 
 
@@ -67,39 +65,39 @@ a {
 // ensures we don't break anyone's use of the element.
 
 figure {
-  margin: 0;
+    margin: 0;
 }
 
 
 // Images
 
 img {
-  vertical-align: middle;
+    vertical-align: middle;
 }
 
 // Responsive images (ensure images don't scale beyond their parents)
 .img-responsive {
-  @include img-responsive;
+    @include img-responsive;
 }
 
 // Rounded corners
 .img-rounded {
-  border-radius: $border-radius-large;
+    border-radius: $border-radius-large;
 }
 
 // Image thumbnails
 //
 // Heads up! This is mixin-ed into thumbnails.less for `.thumbnail`.
 .img-thumbnail {
-  padding: $thumbnail-padding;
-  line-height: $line-height-base;
-  background-color: $thumbnail-bg;
-  border: 1px solid $thumbnail-border;
-  border-radius: $thumbnail-border-radius;
-  @include transition(all .2s ease-in-out);
+    padding: $thumbnail-padding;
+    line-height: $line-height-base;
+    background-color: $thumbnail-bg;
+    border: 1px solid $thumbnail-border;
+    border-radius: $thumbnail-border-radius;
+    @include transition(all 0.2s ease-in-out);
 
-  // Keep them at most 100% wide
-  @include img-responsive(inline-block);
+    // Keep them at most 100% wide
+    @include img-responsive(inline-block);
 }
 
 // Perfect circle
@@ -112,7 +110,7 @@ img {
 
 hr {
     width: 14%;
-    margin-top:    $line-height-computed * 2;
+    margin-top: $line-height-computed * 2;
     margin-bottom: $line-height-computed * 2;
     border: 0;
     border-top: 1px solid $hr-border;
@@ -124,14 +122,14 @@ hr {
 // See: http://a11yproject.com/posts/how-to-hide-content/
 
 .sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  clip: rect(0,0,0,0);
-  border: 0;
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    padding: 0;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
 }
 
 // Use in conjunction with .sr-only to only display content when it's focused.
@@ -139,13 +137,13 @@ hr {
 // Credit: HTML5 Boilerplate
 
 .sr-only-focusable {
-  &:active,
-  &:focus {
-    position: static;
-    width: auto;
-    height: auto;
-    margin: 0;
-    overflow: visible;
-    clip: auto;
-  }
+    &:active,
+    &:focus {
+        position: static;
+        width: auto;
+        height: auto;
+        margin: 0;
+        overflow: visible;
+        clip: auto;
+    }
 }
