--- a/generic/mixins/_buttons.scss
+++ b/generic/mixins/_buttons.scss
@@ -12,30 +12,31 @@
     color: $color;
 
     &:active,
-    &.active{
+    &.active {
         background-image: none;
     }
-  
-  &.disabled,
-  &[disabled],
-  fieldset[disabled] & {
-    &,
-    &:hover,
-    &:focus,
-    &:active,
-    &.active {
-      background-color: $background;
-      border-color: $border;
-	  cursor: not-allowed;
-	  pointer-events: none; // Future-proof disabling of clicks
+    // scss-lint:disable QualifyingElement
+    &.disabled,
+    &[disabled],
+    fieldset[disabled] & {
+        &,
+        &:hover,
+        &:focus,
+        &:active,
+        &.active {
+            background-color: $background;
+            border-color: $border;
+            cursor: not-allowed;
+            pointer-events: none; // Future-proof disabling of clicks
+        }
     }
-  }
+    // scss-lint:enable QualifyingElement
 }
 
 /**
  * Button Effects: use with btn
  */
-@mixin btn-effects($background, $border, $color: inherit){
+@mixin btn-effects($background, $border, $color: inherit) {
     &:hover,
     &:focus,
     &:active,
