--- a/generic/mixins/_media-query.scss
+++ b/generic/mixins/_media-query.scss
@@ -11,8 +11,8 @@ $query-unit: 16px;
 /**
  * Set $query1: max for a max-qidth query, defaults to min-width
  */
-@mixin mq( $point, $query1: min, $query2: width, $IE9: false) {
-    @if $IE9 == true{
+@mixin mq($point, $query1: min, $query2: width, $ie9: false) {
+    @if $ie9 == true{
         .lt-ie9 & {
             @content;
         }
@@ -20,8 +20,8 @@ $query-unit: 16px;
         @media screen and (#{$query1}-#{$query2}: strip-units($point) / strip-units($query-unit) + em) {
             @content;
         }
-    }
-
+    } 
+    
     @else {
         @media screen and (#{$query1}-#{$query2}: strip-units($point) / strip-units($query-unit) + em) {
             @content;
