--- a/generic/mixins/_type.scss
+++ b/generic/mixins/_type.scss
@@ -11,8 +11,8 @@
  * }
  */
 @mixin font-size($font-size, $line-height: true) {
-    //font-size: $font-size;
-    font-size: ($font-size / $font-size-base) * 1em;
+    font-size: $font-size;
+    font-size: ($font-size / $font-size-base) * 1rem;
 
     @if $line-height == true {
         line-height: ceil($font-size / $base-line-height) * ($base-line-height / $font-size);
