--- a/_crubrand.scss
+++ b/_crubrand.scss
@@ -120,6 +120,8 @@
 /*------------------------------------*\
  #IMPORTS
 \*------------------------------------*/
+@import "bourbon/bourbon";
+
 // Core variables and mixins
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/variables";
 
