--- a/bootstrap-variations/_type.scss
+++ b/bootstrap-variations/_type.scss
@@ -253,7 +253,7 @@ blockquote {
     font-weight: 300;
     font-style: italic;
     line-height: 1.38095;
-    letter-spacing: .01em;
+    letter-spacing: 0.01em;
     
     font-size: $blockquote-font-size;
     border-left: 3px solid $brand-primary;
