--- a/_crubrand.scss
+++ b/_crubrand.scss
@@ -155,6 +155,7 @@
 
 @import "components/lists";
 @import "bootstrap-variations/navbar";
+@import "elements/images";
 
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/breadcrumbs";
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/pagination";
