--- a/bootstrap-variations/_type.scss
+++ b/bootstrap-variations/_type.scss
@@ -78,9 +78,9 @@ p {
     margin: 0 0 ($line-height-computed / 2);
 }
 
-.page-content p {
-    font-size: 19px;
-}
+//.page-content p {
+//   font-size: 19px;
+//}
 
 
 // Emphasis & misc
