--- a/_crubrand.scss
+++ b/_crubrand.scss
@@ -143,8 +143,12 @@
 
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/grid";
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/tables";
-@import "../bootstrap-sass-official/assets/stylesheets/bootstrap/forms";
-@import "../bootstrap-sass-official/assets/stylesheets/bootstrap/buttons";
+@import "bootstrap-variations/forms";
+@import "bootstrap-variations/buttons";
+
+// Cru Buttons
+@import "components/buttons";
+
 
 // Components
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/component-animations";
@@ -158,7 +162,10 @@
 @import "elements/images";
 
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/breadcrumbs";
-@import "../bootstrap-sass-official/assets/stylesheets/bootstrap/pagination";
+
+@import "bootstrap-variations/pagination";
+@import "components/pagination";
+
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/pager";
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/labels";
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/badges";
@@ -167,6 +174,9 @@
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/alerts";
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/progress-bars";
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/media";
+
+//@import "bootstrap-variations/media";
+
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/list-group";
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/panels";
 @import "../bootstrap-sass-official/assets/stylesheets/bootstrap/responsive-embed";
