--- a/elements/_images.scss
+++ b/elements/_images.scss
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+ #IMAGES
+\*------------------------------------*/
+
 img {
     @include img-responsive();
 }
