--- a/bootstrap-variations/_buttons.scss
+++ b/bootstrap-variations/_buttons.scss
@@ -42,17 +42,19 @@
         outline: 0;
         background-image: none;
     
-        @include box-shadow(inset 0 3px 5px rgba(0,0,0,.125));
+        @include box-shadow(inset 0 3px 5px rgba(0, 0, 0, 0.125));
     }
 
+    // scss-lint:disable QualifyingElement
     &.disabled,
     &[disabled],
     fieldset[disabled] & {
         cursor: $cursor-disabled;
         pointer-events: none; // Future-proof disabling of clicks
-        @include opacity(.65);
+        @include opacity(0.65);
         @include box-shadow(none);
     }
+    // scss-lint:enable QualifyingElement
 }
 
 
@@ -96,7 +98,8 @@
     color: $link-color;
     font-weight: normal;
     border-radius: 0;
-
+    
+    // scss-lint:disable QualifyingElement
     &,
     &:active,
     &.active,
@@ -105,26 +108,30 @@
         background-color: transparent;
         @include box-shadow(none);
     }
+    
     &,
     &:hover,
     &:focus,
     &:active {
         border-color: transparent;
     }
+    
     &:hover,
     &:focus {
         color: $link-hover-color;
         text-decoration: underline;
         background-color: transparent;
     }
+    
     &[disabled],
     fieldset[disabled] & {
         &:hover,
         &:focus {
-        color: $btn-link-disabled-color;
-        text-decoration: none;
+            color: $btn-link-disabled-color;
+            text-decoration: none;
         }
     }
+    // scss-lint:enable QualifyingElement
 }
 
 
@@ -135,6 +142,7 @@
     // line-height: ensure even-numbered height of button next to large input
     @include button-size($padding-large-vertical, $padding-large-horizontal, $font-size-base, $line-height-large, $border-radius-large);
 }
+
 .btn-sm,
 .btn-xs {
     // line-height: ensure proper height of button next to small input
@@ -155,6 +163,8 @@
     margin-top: 5px;
 }
 
+// scss-lint:disable QualifyingElement
+
 // Specificity overrides
 input[type="submit"],
 input[type="reset"],
@@ -163,3 +173,4 @@ input[type="button"] {
         width: 100%;
     }
 }
+// scss-lint:enable QualifyingElement
