--- a/bootstrap-variations/_forms.scss
+++ b/bootstrap-variations/_forms.scss
@@ -1,6 +1,7 @@
 //
 // Forms
 // --------------------------------------------------
+// scss-lint:disable QualifyingElement
 
 
 // Normalize non-controls
@@ -8,32 +9,32 @@
 // Restyle and baseline non-control form elements.
 
 fieldset {
-  padding: 0;
-  margin: 0;
-  border: 0;
-  // Chrome and Firefox set a `min-width: min-content;` on fieldsets,
-  // so we reset that to ensure it behaves more like a standard block element.
-  // See https://github.com/twbs/bootstrap/issues/12359.
-  min-width: 0;
+    padding: 0;
+    margin: 0;
+    border: 0;
+    // Chrome and Firefox set a `min-width: min-content;` on fieldsets,
+    // so we reset that to ensure it behaves more like a standard block element.
+    // See https://github.com/twbs/bootstrap/issues/12359.
+    min-width: 0;
 }
 
 legend {
-  display: block;
-  width: 100%;
-  padding: 0;
-  margin-bottom: $line-height-computed;
-  font-size: ($font-size-base * 1.5);
-  line-height: inherit;
-  color: $legend-color;
-  border: 0;
-  border-bottom: 1px solid $legend-border-color;
+    display: block;
+    width: 100%;
+    padding: 0;
+    margin-bottom: $line-height-computed;
+    font-size: ($font-size-base * 1.5);
+    line-height: inherit;
+    color: $legend-color;
+    border: 0;
+    border-bottom: 1px solid $legend-border-color;
 }
 
 label {
-  display: inline-block;
-  max-width: 100%; // Force IE8 to wrap long content (see https://github.com/twbs/bootstrap/issues/13141)
-  margin-bottom: 5px;
-  font-weight: bold;
+    display: inline-block;
+    max-width: 100%; // Force IE8 to wrap long content (see https://github.com/twbs/bootstrap/issues/13141)
+    margin-bottom: 5px;
+    font-weight: bold;
 }
 
 
@@ -45,48 +46,66 @@ label {
 
 // Override content-box in Normalize (* isn't specific enough)
 input[type="search"] {
-  @include box-sizing(border-box);
+    @include box-sizing(border-box);
+    
+    // Search inputs in iOS
+    //
+    // This overrides the extra rounded corners on search inputs in iOS so that our
+    // `.form-control` class can properly style them. Note that this cannot simply
+    // be added to `.form-control` as it's not specific enough. For details, see
+    // https://github.com/twbs/bootstrap/issues/11586.
+    -webkit-appearance: none;
 }
 
 // Position radios and checkboxes better
 input[type="radio"],
 input[type="checkbox"] {
-  margin: 4px 0 0;
-  margin-top: 1px \9; // IE8-9
-  line-height: normal;
+    margin: 4px 0 0;
+    margin-top: 1px \9; // IE8-9
+    line-height: normal;
+    
+    // Apply same disabled cursor tweak as for inputs
+    // Some special care is needed because <label>s don't inherit their parent's `cursor`.
+    //
+    // Note: Neither radios nor checkboxes can be readonly.
+    &[disabled],
+    &.disabled,
+    fieldset[disabled] & {
+        cursor: $cursor-disabled;
+    }
 }
 
 // Set the height of file controls to match text inputs
 input[type="file"] {
-  display: block;
+    display: block;
 }
 
 // Make range inputs behave like textual form controls
 input[type="range"] {
-  display: block;
-  width: 100%;
+    display: block;
+    width: 100%;
 }
 
 // Make multiple select elements height not fixed
 select[multiple],
 select[size] {
-  height: auto;
+    height: auto;
 }
 
 // Focus for file, radio, and checkbox
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
-  @include tab-focus;
+    @include tab-focus;
 }
 
 // Adjust output element
 output {
-  display: block;
-  padding-top: ($padding-base-vertical + 1);
-  font-size: $font-size-base;
-  line-height: $line-height-base;
-  color: $input-color;
+    display: block;
+    padding-top: ($padding-base-vertical + 1);
+    font-size: $font-size-base;
+    line-height: $line-height-base;
+    color: $input-color;
 }
 
 
@@ -113,61 +132,48 @@ output {
 // input[type="color"]
 
 .form-control {
-  display: block;
-  width: 100%;
-  height: $input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
-  padding: $padding-base-vertical $padding-small-horizontal;
-  font-size: $font-size-base;
-  line-height: $line-height-base;
-  color: $input-color;
-  background-color: $input-bg;
-  background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
-  border: 2px solid $input-border;
-  border-radius: $input-border-radius;
-  @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075));
-  @include transition(border-color ease-in-out .15s, box-shadow ease-in-out .15s);
+    display: block;
+    width: 100%;
+    height: $input-height-base; // Make inputs at least the height of their button counterpart (base line-height + padding + border)
+    padding: $padding-base-vertical $padding-small-horizontal;
+    font-size: $font-size-base;
+    line-height: $line-height-base;
+    color: $input-color;
+    background-color: $input-bg;
+    background-image: none; // Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214
+    border: 2px solid $input-border;
+    border-radius: $input-border-radius;
+    @include box-shadow(inset 0 1px 1px rgba(0, 0, 0, 0.075));
+    @include transition(border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s);
 
-  // Placeholder
-  @include placeholder;
+    // Placeholder
+    @include placeholder;
 
-  &:focus {
-    border-color: $color-blue-bright;
-    outline: 0;
-  }
-  
-  // Disabled and read-only inputs
-  //
-  // HTML5 says that controls under a fieldset > legend:first-child won't be
-  // disabled if the fieldset is disabled. Due to implementation difficulty, we
-  // don't honor that edge case; we style them as disabled anyway.
-  &[disabled],
-  &[readonly],
-  fieldset[disabled] & {
-    cursor: $cursor-disabled;
-    background-color: $input-bg-disabled;
-    opacity: 1; // iOS fix for unreadable disabled content
-  }
+    &:focus {
+        border-color: $color-blue-bright;
+        outline: 0;
+    }
 
-  // [converter] extracted textarea& to textarea.form-control
+    // Disabled and read-only inputs
+    //
+    // HTML5 says that controls under a fieldset > legend:first-child won't be
+    // disabled if the fieldset is disabled. Due to implementation difficulty, we
+    // don't honor that edge case; we style them as disabled anyway.
+    &[disabled],
+    &[readonly],
+    fieldset[disabled] & {
+        cursor: $cursor-disabled;
+        background-color: $input-bg-disabled;
+        opacity: 1; // iOS fix for unreadable disabled content
+    }
+
+    // [converter] extracted textarea& to textarea.form-control
 }
 
 // Reset height for `textarea`s
 textarea.form-control {
     height: auto;
 }
-
-
-// Search inputs in iOS
-//
-// This overrides the extra rounded corners on search inputs in iOS so that our
-// `.form-control` class can properly style them. Note that this cannot simply
-// be added to `.form-control` as it's not specific enough. For details, see
-// https://github.com/twbs/bootstrap/issues/11586.
-
-input[type="search"] {
-    -webkit-appearance: none;
-}
-
 
 // Special styles for iOS temporal inputs
 //
@@ -183,12 +189,14 @@ input[type="search"] {
     input[type="month"] {
         line-height: $input-height-base;
     }
+    
     input[type="date"].input-sm,
     input[type="time"].input-sm,
     input[type="datetime-local"].input-sm,
     input[type="month"].input-sm {
         line-height: $input-height-small;
     }
+    
     input[type="date"].input-lg,
     input[type="time"].input-lg,
     input[type="datetime-local"].input-lg,
@@ -226,7 +234,16 @@ input[type="search"] {
         font-weight: normal;
         cursor: pointer;
     }
+    
+    // These classes are used on elements with <label> descendants
+    &.disabled,
+    fieldset[disabled] & {
+        label {
+            cursor: $cursor-disabled;
+        }
+    }
 }
+
 .radio input[type="radio"],
 .radio-inline input[type="radio"],
 .checkbox input[type="checkbox"],
@@ -250,44 +267,19 @@ input[type="search"] {
     vertical-align: middle;
     font-weight: normal;
     cursor: pointer;
+    
+    // These classes are used directly on <label>s
+    &.disabled,
+    fieldset[disabled] & {
+        cursor: $cursor-disabled;
+    }
 }
+
 .radio-inline + .radio-inline,
 .checkbox-inline + .checkbox-inline {
     margin-top: 0;
     margin-left: 10px; // space out consecutive inline controls
 }
-
-// Apply same disabled cursor tweak as for inputs
-// Some special care is needed because <label>s don't inherit their parent's `cursor`.
-//
-// Note: Neither radios nor checkboxes can be readonly.
-input[type="radio"],
-input[type="checkbox"] {
-    &[disabled],
-    &.disabled,
-    fieldset[disabled] & {
-        cursor: $cursor-disabled;
-    }
-}
-// These classes are used directly on <label>s
-.radio-inline,
-.checkbox-inline {
-    &.disabled,
-    fieldset[disabled] & {
-        cursor: $cursor-disabled;
-    }
-}
-// These classes are used on elements with <label> descendants
-.radio,
-.checkbox {
-    &.disabled,
-    fieldset[disabled] & {
-        label {
-            cursor: $cursor-disabled;
-        }
-    }
-}
-
 
 // Static form control text
 //
@@ -332,6 +324,7 @@ input[type="checkbox"] {
         padding-right: ($input-height-base * 1.25);
     }
 }
+
 // Feedback icon (requires .glyphicon classes)
 .form-control-feedback {
     position: absolute;
@@ -345,11 +338,13 @@ input[type="checkbox"] {
     text-align: center;
     pointer-events: none;
 }
+
 .input-lg + .form-control-feedback {
     width: $input-height-large;
     height: $input-height-large;
     line-height: $input-height-large;
 }
+
 .input-sm + .form-control-feedback {
     width: $input-height-small;
     height: $input-height-small;
@@ -360,9 +355,11 @@ input[type="checkbox"] {
 .has-success {
     @include form-control-validation($state-success-text, $state-success-text, $state-success-bg);
 }
+
 .has-warning {
     @include form-control-validation($state-warning-text, $state-warning-text, $state-warning-bg);
 }
+
 .has-error {
     @include form-control-validation($state-danger-text, $state-danger-text, $state-danger-bg);
 }
@@ -370,7 +367,7 @@ input[type="checkbox"] {
 // Reposition feedback icon if input has visible label above
 .has-feedback label {
 
-    & ~ .form-control-feedback {
+    ~ .form-control-feedback {
         top: ($line-height-computed + 5); // Height of the `label` and its margin
     }
 
@@ -463,6 +460,7 @@ input[type="checkbox"] {
                 padding-left: 0;
             }
         }
+        
         .radio input[type="radio"],
         .checkbox input[type="checkbox"] {
             position: relative;
@@ -475,6 +473,7 @@ input[type="checkbox"] {
         }
     }
 }
+
 // [converter] extracted as `@mixin form-inline` for libsass compatibility
 .form-inline {
     @include form-inline;
