--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -2,19 +2,24 @@
  #BUTTONS
 \*------------------------------------*/
 
+// scss-lint:disable QualifyingElement
+
 // Danger and error appear as red
 .btn-secondary {
-  @include button-variant($btn-secondary-color, $btn-secondary-bg, $btn-secondary-border);
+    @include button-variant($btn-secondary-color, $btn-secondary-bg, $btn-secondary-border);
 }
 
 // Danger and error appear as red
 .btn-subtle {
     color: #6d6e71;
+    
+    // scss-lint:disable DuplicateProperty
     background-color: #e9e9e9;
     border-color: #d0d0d0;
-    background-color: rgba(229,229,229,0.35);
-    border-color: rgba(216,216,216,0.35);
-
+    background-color: rgba(229, 229, 229, 0.35);
+    border-color: rgba(216, 216, 216, 0.35);
+    // scss-lint:enable DuplicateProperty
+    
     &:hover,
     &:focus,
     &.focus,
@@ -25,11 +30,13 @@
         background-color: #666062;
         border-color: #595455;
     }
+    
     &:active,
     &.active,
     .open > &.dropdown-toggle {
       background-image: none;
     }
+    
     &.disabled,
     &[disabled],
     fieldset[disabled] & {
@@ -46,7 +53,7 @@
 
     .badge {
         color: #e9e9e9;
-        color: rgba(229,229,229,0.35);
+        color: rgba(229, 229, 229, 0.35);
         background-color: #6d6e71;
     }
 }
