--- a/_settings.scss
+++ b/_settings.scss
@@ -10,7 +10,7 @@ $line-height-pixel: 29px;
 /**
  * #COLORS
  */
-$color-gold:            #ffc425;
+$color-gold:            #ffd014;
 $color-gray:            #666062;
 $color-white:           #fff;
 $color-orange:          #dd7d1b;
